<resources>
    <string name="app_name">VS_fabischn_Webservices</string>
    <string name="rest_client">REST client</string>
    <string name="soap_client">SOAP client</string>
    <string name="rest_server">REST server</string>
    <string name="no_data">No Data</string>
    <string name="send_rest_request_raw">Get HTML</string>
    <string name="send_rest_request_plain">Get Plaintext</string>
    <string name="send_rest_request_json">Get JSON</string>
    <string name="send_soap_request_rawxml">Send by raw XML</string>
    <string name="send_soap_request_soaplib">Send using ksoap2</string>
    <string name="no_ip">No IP Address assigned</string>
    <string name="no_port">No TCP Port assigned</string>
    <string name="enable_server">Enable Server</string>
    <string name="disable_server">Disable Server</string>
    <string name="server_down">Server is DOWN</string>
    <string name="server_up">Server is UP</string>
    <string name="no_networkint">No network interface found</string>
</resources>