<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_restserver"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.ethz.inf.vs.a2.fabischn.webservices.RESTServerActivity">
    <TextView android:id="@+id/text_restserver_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_down"/>
    <TextView android:id="@+id/text_restserver_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_ip"/>
    <TextView android:id="@+id/text_restserver_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_port"/>
    <Button android:id="@+id/btn_toggle_rest_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_server"
        android:onClick="onClick"/>

</LinearLayout>
