<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_restclient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.ethz.inf.vs.a2.fabischn.webservices.RESTClientActivity">
    <TextView android:id="@+id/text_restclient_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data"/>
    <Button android:id="@+id/btn_rest_request_raw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_rest_request_raw"
        android:onClick="onClick"/>
    <Button android:id="@+id/btn_rest_request_plain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_rest_request_plain"
        android:onClick="onClick"/>
    <Button android:id="@+id/btn_rest_request_json"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_rest_request_json"
        android:onClick="onClick"/>


</LinearLayout>
