<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_soapclient"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.ethz.inf.vs.a2.fabischn.webservices.SOAPClientActivity">
    <TextView android:id="@+id/text_soapclient_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data"/>
    <Button android:id="@+id/btn_soap_request_rawxml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_soap_request_rawxml"
        android:onClick="onClick"/>
    <Button android:id="@+id/btn_soap_request_soaplib"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_soap_request_soaplib"
        android:onClick="onClick"/>

</LinearLayout>
